# metazebrobot

./: .gitignore  README.md  ahrensm_tanks.json  config.json  get_all_user_ids.py  get_pyrat_tanks.py  get_pyrat_tanksbak.py  jeremy_tanks.json  pyproject.toml  pyrat-api-minimal.py  pyrat-api-test-updated.py  pyrat-api-test.py  pyrat-page-inspector.py  pyrat-token-test.py  pyrat-url-tester.py  pyrat_query_tool.py  securing_pyrat.py  survivability_report.csv  updated_df.csv  user_ids.json
.ipynb_checkpoints/: records_with_dpf_over_15-checkpoint.csv  survivability_report-checkpoint.csv
src/: main.py
src/metazebrobot/: __init__.py  devplan.txt  lab_bug_squash.py  main_window.py  metadata_model.py
src/metazebrobot/controllers/: agarose_controller.py  fish_dish_controller.py
src/metazebrobot/data/: data_manager.py  json_storage.py
src/metazebrobot/models/: agarose.py  fish_dish.py
src/metazebrobot/utils/: config.py  export_module.py  file_operations.py
src/metazebrobot/views/: agarose_tab.py  fish_dish_tab.py  main_window.py
src/metazebrobot/views/dialogs/: export_dialog.py  quality_check_dialog.py  termination_dialog.py
