[project]
dependencies = []
description = "Add a short description here"
name = "metazebrobot"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
metazebrobot = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyside6 = ">=6.8.1,<7"
zarr = ">=2.18.4,<3"
pydantic = ">=2.10.5,<3"
h5py = ">=3.12.1,<4"
numpy = ">=2.2.2,<3"
rich = ">=13.9.4,<14"
